src/test/deca/syntax/invalid/block/missing_open_brace_empty_11.deca
// Description:
//    Tests a syntactically incorrect program with an unopened brace for an empty block
//
// Results:
//    Line 11 : Error, unmatched brace, expected a '{'.
//
// History:
//    created on 17/12/2024


}